# backend/validation/authenticate.js
@@ -1,0 +1,18 @@
+const jwt = require('jsonwebtoken');
+
+const authenticateToken = (req, res, next) => {
+    const token = req.headers.authorization?.split(' ')[1];
+
+    if (!token) {
+        return res.status(401).json({ message: 'No token provided.' });
+    }
+
+    try {
+        req.user = jwt.verify(token, process.env.SESSION_SECRET);
+        next();
+    } catch {
+        res.status(403).json({ message: 'Invalid token.' });
+    }
+};
+
+module.exports = authenticateToken;
